[tool.poetry]
name = "gofilepy"
version = "0.3.0"
description = "Upload files to Gofile.io"
authors = ["Mohammad Alyetama <malyetama@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = ">=2.0"
rich = ">=9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gofile = 'gofilepy:gofile.main'
gofilepy = 'gofilepy:gofile.main'
